GetNotesBtUserId
function to get notes from the logged-in user
